--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@
 locale                   : "en-US"
 title                    : "Thomas Cheale / University of Kent"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Thomas Cheale"
+description              : &description "PhD Student in Statistical Ecology"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
