--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
+  name             : "Thomas Cheale"
+  avatar           : "280736803_5207279342684519_5786623011907523329_n.jpg"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
