--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Thomas Cheale"
-  avatar           : "280736803_5207279342684519_5786623011907523329_n.jpg"
+  avatar           : "me.png"
   bio              : "Your biography for the left-hand sidebar"
   location         : "Location"
   employer         :
